force-app/main/default/objects/CampaignMember/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to Roll up campaigns to the Account.

2014-01-31 Consumer Enablement - renamed the Field Label from &quot;Organisation/Individual&quot;</description>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>