force-app/main/default/objects/CampaignMember/fields/et4ae5__Activity__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Test Status</fullName>
            </value>
            <value>
                <fullName>test value 1</fullName>
            </value>
            <value>
                <fullName>test value 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>