force-app/main/default/objects/CampaignMember/fields/Public_Id__c.field-meta.xml
<CustomField>
    <fullName>Public_Id__c</fullName>
    <description>Used by the Gs Campaign and stores a publicly referenced Id generated when an email is sent to a lead.</description>
    <label>Public Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>